# VisionDesk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: 1_OverallTechnicalRoute.md  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/source/: utils.rst.txt
docs/_build/html/source/: utils.html
src/visiondesk/: __main__.py  app.py  main.py
src/visiondesk/ai/: __init__.py
src/visiondesk/ai/models/: __init__.py  vision_model.py
src/visiondesk/ai/providers/: __init__.py  base.py  openai.py
src/visiondesk/core/: __init__.py  config.py
src/visiondesk/core/services/: __init__.py  ai_service.py  screenshot_service.py
src/visiondesk/models/: __init__.py  region.py  settings.py
src/visiondesk/ui/: __init__.py
src/visiondesk/ui/components/: __init__.py  main_window.py  overlay_window.py  region_selector.py
src/visiondesk/ui/shortcuts/: shortcut_manager.py
src/visiondesk/utils/: __init__.py  constants.py  decorators.py  image_utils.py  logger.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
